--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
@@ -20,6 +20,7 @@
     "middleware": "^1.0.0",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.4",
+    "nodemailer": "^6.9.14",
     "nodemon": "^3.1.4"
   }
 }
